// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageResolver resolveImage ignores images outside of passed scales 1`] = `
Object {
  "height": 4,
  "width": 4,
}
`;

exports[`ImageResolver resolveImage ignores images outside of passed scales 2`] = `
Array [
  Array [
    Object {
      "scale": 1,
      "type": "image/png",
      "uri": "/some/url/wow.png",
    },
    Object {
      "data": Array [
        1,
        3,
        3,
        7,
      ],
      "type": "Buffer",
    },
  ],
  Array [
    Object {
      "scale": 1,
      "type": "image/avif",
      "uri": "/some/url/wow.avif",
    },
    Object {
      "data": Array [
        9,
        9,
        9,
        9,
      ],
      "type": "Buffer",
    },
  ],
  Array [
    Object {
      "scale": 1,
      "type": "image/webp",
      "uri": "/some/url/wow.webp",
    },
    Object {
      "data": Array [
        3,
        3,
        3,
        3,
      ],
      "type": "Buffer",
    },
  ],
]
`;

exports[`ImageResolver resolveImage resolves images with missing scales 1`] = `
Object {
  "height": 4,
  "width": 4,
}
`;

exports[`ImageResolver resolveImage resolves images with missing scales 2`] = `
Array [
  Array [
    Object {
      "scale": 1,
      "type": "image/png",
      "uri": "/some/url/lonely.png",
    },
    Object {
      "data": Array [
        1,
        3,
        3,
        7,
      ],
      "type": "Buffer",
    },
  ],
  Array [
    Object {
      "scale": 1,
      "type": "image/avif",
      "uri": "/some/url/lonely.avif",
    },
    Object {
      "data": Array [
        9,
        9,
        9,
        9,
      ],
      "type": "Buffer",
    },
  ],
  Array [
    Object {
      "scale": 1,
      "type": "image/webp",
      "uri": "/some/url/lonely.webp",
    },
    Object {
      "data": Array [
        3,
        3,
        3,
        3,
      ],
      "type": "Buffer",
    },
  ],
]
`;

exports[`ImageResolver resolveImage resolves images with modern format support 1`] = `
Object {
  "height": 4,
  "width": 4,
}
`;

exports[`ImageResolver resolveImage resolves images with modern format support 2`] = `
Array [
  Array [
    Object {
      "scale": 1,
      "type": "image/png",
      "uri": "/some/url/image.png",
    },
    Object {
      "data": Array [
        1,
        3,
        3,
        7,
      ],
      "type": "Buffer",
    },
  ],
  Array [
    Object {
      "scale": 1,
      "type": "image/avif",
      "uri": "/some/url/image.avif",
    },
    Object {
      "data": Array [
        9,
        9,
        9,
        9,
      ],
      "type": "Buffer",
    },
  ],
  Array [
    Object {
      "scale": 1,
      "type": "image/webp",
      "uri": "/some/url/image.webp",
    },
    Object {
      "data": Array [
        3,
        3,
        3,
        3,
      ],
      "type": "Buffer",
    },
  ],
  Array [
    Object {
      "scale": 2,
      "type": "image/png",
      "uri": "/some/url/image@2x.png",
    },
    Object {
      "data": Array [
        50,
      ],
      "type": "Buffer",
    },
  ],
  Array [
    Object {
      "scale": 2,
      "type": "image/avif",
      "uri": "/some/url/image@2x.avif",
    },
    Object {
      "data": Array [
        9,
        9,
        9,
        9,
      ],
      "type": "Buffer",
    },
  ],
  Array [
    Object {
      "scale": 2,
      "type": "image/webp",
      "uri": "/some/url/image@2x.webp",
    },
    Object {
      "data": Array [
        3,
        3,
        3,
        3,
      ],
      "type": "Buffer",
    },
  ],
  Array [
    Object {
      "scale": 3,
      "type": "image/png",
      "uri": "/some/url/image@3x.png",
    },
    Object {
      "data": Array [
        51,
      ],
      "type": "Buffer",
    },
  ],
  Array [
    Object {
      "scale": 3,
      "type": "image/avif",
      "uri": "/some/url/image@3x.avif",
    },
    Object {
      "data": Array [
        9,
        9,
        9,
        9,
      ],
      "type": "Buffer",
    },
  ],
  Array [
    Object {
      "scale": 3,
      "type": "image/webp",
      "uri": "/some/url/image@3x.webp",
    },
    Object {
      "data": Array [
        3,
        3,
        3,
        3,
      ],
      "type": "Buffer",
    },
  ],
]
`;

exports[`ImageResolver resolveImage resolves images with scale suffix 1`] = `
Object {
  "height": 2,
  "width": 2,
}
`;

exports[`ImageResolver resolveImage resolves images with scale suffix 2`] = `
Array [
  Array [
    Object {
      "scale": 2,
      "type": "image/png",
      "uri": "/some/url/weird@2x.png",
    },
    Object {
      "data": Array [
        1,
        3,
        3,
        7,
      ],
      "type": "Buffer",
    },
  ],
  Array [
    Object {
      "scale": 2,
      "type": "image/avif",
      "uri": "/some/url/weird@2x.avif",
    },
    Object {
      "data": Array [
        9,
        9,
        9,
        9,
      ],
      "type": "Buffer",
    },
  ],
  Array [
    Object {
      "scale": 2,
      "type": "image/webp",
      "uri": "/some/url/weird@2x.webp",
    },
    Object {
      "data": Array [
        3,
        3,
        3,
        3,
      ],
      "type": "Buffer",
    },
  ],
]
`;

exports[`ImageResolver resolveImage resolves images without modern formats support 1`] = `
Object {
  "height": 4,
  "width": 4,
}
`;

exports[`ImageResolver resolveImage resolves images without modern formats support 2`] = `
Array [
  Array [
    Object {
      "scale": 1,
      "type": "image/gif",
      "uri": "/some/url/anim.gif",
    },
    Object {
      "data": Array [
        1,
        3,
        3,
        7,
      ],
      "type": "Buffer",
    },
  ],
  Array [
    Object {
      "scale": 2,
      "type": "image/gif",
      "uri": "/some/url/anim@2x.gif",
    },
    Object {
      "data": Array [
        54,
      ],
      "type": "Buffer",
    },
  ],
  Array [
    Object {
      "scale": 3,
      "type": "image/gif",
      "uri": "/some/url/anim@3x.gif",
    },
    Object {
      "data": Array [
        55,
      ],
      "type": "Buffer",
    },
  ],
]
`;
